[gd_scene load_steps=3 format=3 uid="uid://bl86hbug4i4oq"]

[ext_resource type="Script" path="res://Menu.gd" id="1_7768e"]
[ext_resource type="Theme" uid="uid://b8ds072ddd3yk" path="res://MenuLabel.tres" id="1_apyta"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7768e")

[node name="Username" type="Label" parent="."]
texture_filter = 2
layout_mode = 0
offset_left = 32.0
offset_top = 32.0
offset_right = 284.0
offset_bottom = 56.0
theme = ExtResource("1_apyta")
text = "IRC Username"

[node name="IRCUsername" type="LineEdit" parent="Username"]
layout_mode = 0
offset_left = 268.0
offset_right = 898.0
offset_bottom = 32.0
theme = ExtResource("1_apyta")
placeholder_text = "Your IRC username"

[node name="Password" type="Label" parent="."]
layout_mode = 0
offset_left = 32.0
offset_top = 80.0
offset_right = 284.0
offset_bottom = 104.0
theme = ExtResource("1_apyta")
text = "IRC Password"

[node name="IRCPassword" type="LineEdit" parent="Password"]
layout_mode = 0
offset_left = 268.0
offset_right = 898.0
offset_bottom = 32.0
theme = ExtResource("1_apyta")
placeholder_text = "Password or oauth token"
secret = true

[node name="Hostname" type="Label" parent="."]
layout_mode = 0
offset_left = 32.0
offset_top = 128.0
offset_right = 284.0
offset_bottom = 152.0
theme = ExtResource("1_apyta")
text = "IRC Hostname"

[node name="IRCHostname" type="LineEdit" parent="Hostname"]
layout_mode = 0
offset_left = 268.0
offset_right = 613.0
offset_bottom = 32.0
theme = ExtResource("1_apyta")
placeholder_text = "IRC server"

[node name="Port" type="Label" parent="."]
layout_mode = 0
offset_left = 656.0
offset_top = 128.0
offset_right = 740.0
offset_bottom = 152.0
theme = ExtResource("1_apyta")
text = "Port"

[node name="IRCPort" type="SpinBox" parent="Port"]
layout_mode = 0
offset_left = 128.0
offset_right = 244.0
offset_bottom = 28.0
theme = ExtResource("1_apyta")
min_value = 1.0
max_value = 65535.0
value = 6667.0

[node name="Channel" type="Label" parent="."]
layout_mode = 0
offset_left = 32.0
offset_top = 176.0
offset_right = 254.0
offset_bottom = 200.0
theme = ExtResource("1_apyta")
text = "IRC Channel"

[node name="IRCChannel" type="LineEdit" parent="Channel"]
layout_mode = 0
offset_left = 268.0
offset_right = 898.0
offset_bottom = 32.0
theme = ExtResource("1_apyta")
placeholder_text = "Auto-connect to this channel"

[node name="IRCAutoConnect" type="CheckBox" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.012
anchor_bottom = 0.044
offset_left = 592.0
offset_top = 232.0
offset_right = 914.48
offset_bottom = 240.24
theme = ExtResource("1_apyta")
text = "Autoconnect IRC"

[node name="Connect" type="Button" parent="."]
layout_mode = 0
offset_left = 288.0
offset_top = 472.0
offset_right = 440.0
offset_bottom = 504.0
theme = ExtResource("1_apyta")
text = "Connect"

[node name="Disconnect" type="Button" parent="."]
layout_mode = 0
offset_left = 32.0
offset_top = 472.0
offset_right = 238.0
offset_bottom = 504.0
theme = ExtResource("1_apyta")
text = "Disconnect"

[node name="Ok" type="Button" parent="."]
layout_mode = 0
offset_left = 872.0
offset_top = 472.0
offset_right = 922.0
offset_bottom = 504.0
theme = ExtResource("1_apyta")
text = "OK"

[node name="Timeouts" type="Label" parent="."]
layout_mode = 0
offset_left = 592.0
offset_top = 352.0
offset_right = 814.0
offset_bottom = 376.0
theme = ExtResource("1_apyta")
text = "Timeouts:"

[node name="Name" type="Label" parent="Timeouts"]
layout_mode = 0
offset_left = 40.0
offset_top = 40.0
offset_right = 127.0
offset_bottom = 64.0
theme = ExtResource("1_apyta")
text = "Name"

[node name="Timeout" type="SpinBox" parent="Timeouts/Name"]
layout_mode = 0
offset_left = 128.0
offset_right = 244.0
offset_bottom = 28.0
theme = ExtResource("1_apyta")
min_value = 1.0
max_value = 65535.0
value = 10.0

[node name="Seconds1" type="Label" parent="Timeouts/Name"]
layout_mode = 0
offset_left = 248.0
offset_right = 272.0
offset_bottom = 24.0
theme = ExtResource("1_apyta")
text = "s"

[node name="Cat" type="Label" parent="Timeouts"]
layout_mode = 0
offset_left = 40.0
offset_top = 80.0
offset_right = 166.0
offset_bottom = 104.0
theme = ExtResource("1_apyta")
text = "Avatar"

[node name="Timeout" type="SpinBox" parent="Timeouts/Cat"]
layout_mode = 0
offset_left = 128.0
offset_right = 244.0
offset_bottom = 28.0
theme = ExtResource("1_apyta")
min_value = 1.0
max_value = 65535.0
value = 60.0

[node name="Seconds2" type="Label" parent="Timeouts/Cat"]
layout_mode = 0
offset_left = 248.0
offset_right = 269.0
offset_bottom = 24.0
theme = ExtResource("1_apyta")
text = "s"

[node name="Attacks" type="CheckBox" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.012
anchor_bottom = 0.044
offset_left = 592.0
offset_top = 272.0
offset_right = 914.48
offset_bottom = 280.24
theme = ExtResource("1_apyta")
text = "Enable Attacks"

[node name="Avatars" type="Label" parent="."]
layout_mode = 0
offset_left = 72.0
offset_top = 232.0
offset_right = 393.0
offset_bottom = 256.0
theme = ExtResource("1_apyta")
text = "Enabled Avatars:"

[node name="S" type="ScrollContainer" parent="Avatars"]
layout_mode = 0
offset_left = 32.0
offset_top = 40.0
offset_right = 400.0
offset_bottom = 124.0
theme = ExtResource("1_apyta")

[node name="B" type="BoxContainer" parent="Avatars/S"]
layout_mode = 2
theme = ExtResource("1_apyta")
vertical = true

[node name="Import" type="Button" parent="Avatars"]
layout_mode = 0
offset_left = 32.0
offset_top = 144.0
offset_right = 184.0
offset_bottom = 176.0
theme = ExtResource("1_apyta")
text = "Import
"

[node name="Commands" type="CheckBox" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.012
anchor_bottom = 0.044
offset_left = 592.0
offset_top = 312.0
offset_right = 914.48
offset_bottom = 320.24
theme = ExtResource("1_apyta")
text = "Enable Commands"

[connection signal="pressed" from="Connect" to="." method="_on_connect_pressed"]
[connection signal="pressed" from="Disconnect" to="." method="_on_disconnect_pressed"]
[connection signal="pressed" from="Ok" to="." method="_on_ok_pressed"]
[connection signal="pressed" from="Avatars/Import" to="." method="_on_import_pressed"]
